<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Broadking_V3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tab_customer">博金客</string>
    <string name="tab_merchant">博金商</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_my">我的</string>
    
    <string name="share">分享</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    
    
    <string name="contact_newFriends">新的朋友</string>
    <string name="contact_merchant">博金商(供应商)</string>

</resources>
